# vcpkg-demo

./: CMakeLists.txt  README.md  compile.sh  main.cc  vcpkg.json
